add some services
