# pkg/api/copilot/v1/openapi.yaml
@@ -6,6 +6,42 @@ info:
     title: Copilot API
     version: 0.0.1
 paths:
+    /copilot/obs/hosts/activity:
+        post:
+            tags:
+                - Copilot
+            operationId: Copilot_GetHostsActivity
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/ads.service.copilot.v1.GetHostsActivityRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ads.service.copilot.v1.GetHostsActivityReply'
+    /copilot/obs/hosts/state:
+        post:
+            tags:
+                - Copilot
+            operationId: Copilot_GetHostsState
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/ads.service.copilot.v1.GetHostsStateRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ads.service.copilot.v1.GetHostsStateReply'
     /copilot/prompt/suggestion:
         post:
             tags:
@@ -24,6 +60,24 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/ads.service.copilot.v1.PromptSuggestionReply'
+    /copilot/rag/search/keyword:
+        post:
+            tags:
+                - Copilot
+            operationId: Copilot_GetRagKeywords
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/ads.service.copilot.v1.GetRagKeywordsRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ads.service.copilot.v1.GetRagKeywordsReply'
     /copilot/security/user:
         post:
             tags:
@@ -73,9 +127,58 @@ components:
                 online:
                     type: string
                     description: Online time
+        ads.service.copilot.v1.GetHostsActivityReply:
+            type: object
+            properties:
+                domain:
+                    type: string
+                hostsActivity:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/ads.service.copilot.v1.HostActivity'
+        ads.service.copilot.v1.GetHostsActivityRequest:
+            type: object
+            properties:
+                startTime:
+                    type: string
+                endTime:
+                    type: string
+            description: GetHostsActivity
+        ads.service.copilot.v1.GetHostsStateReply:
+            type: object
+            properties:
+                domain:
+                    type: string
+                hostsState:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/ads.service.copilot.v1.HostState'
+        ads.service.copilot.v1.GetHostsStateRequest:
+            type: object
+            properties:
+                startTime:
+                    type: string
+                endTime:
+                    type: string
+            description: GetHostsState
+        ads.service.copilot.v1.GetRagKeywordsReply:
+            type: object
+            properties:
+                keywords:
+                    type: array
+                    items:
+                        type: string
+        ads.service.copilot.v1.GetRagKeywordsRequest:
+            type: object
+            properties:
+                text:
+                    type: string
+            description: GetRagKeywords
         ads.service.copilot.v1.GetSecurityAbnormalUserReply:
             type: object
             properties:
+                domain:
+                    type: string
                 abnormalUser:
                     type: array
                     items:
@@ -86,6 +189,37 @@ components:
                 startTime:
                     type: string
                 endTime:
+                    type: string
+            description: GetSecurityAbnormalUser
+        ads.service.copilot.v1.HostActivity:
+            type: object
+            properties:
+                recordId:
+                    type: string
+                timestamp:
+                    type: string
+                hostNum:
+                    type: string
+                hostActivityNum:
+                    type: string
+                hostIdleNum:
+                    type: string
+                hostActivityIps:
+                    type: string
+        ads.service.copilot.v1.HostState:
+            type: object
+            properties:
+                recordId:
+                    type: string
+                timestamp:
+                    type: string
+                application:
+                    type: string
+                host:
+                    type: string
+                operation:
+                    type: string
+                avgOpTime:
                     type: string
         ads.service.copilot.v1.Journal:
             type: object
@@ -116,6 +250,7 @@ components:
                 text:
                     type: string
                     description: input text
+            description: PromptSuggestion
         ads.service.copilot.v1.Suggestion:
             type: object
             properties:
